# polymarket_mcp

./: .env.example  .gitignore  GAP_IMPROVEMENTS.MD  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CAPABILITIES.md
src/polymarket_bot/: bot.py  config.py  main.py  models.py  polymarket_client.py  sources.py  strategy.py
src/polymarket_mcp/: bot.py  config.py  execution.py  main.py  mcp_server.py  models.py  polymarket_client.py  server.py  sources.py
src/polymarket_mcp/auth/: __init__.py  client.py
src/polymarket_mcp/utils/: logger.py  rate_limiter.py  safety_limits.py
tests/: _helpers.py  test_auth_client.py  test_bot.py  test_config.py  test_execution.py  test_main.py  test_mcp_server.py  test_polymarket_client.py  test_rate_limiter.py  test_safety_limits.py  test_safety_limits_comprehensive.py  test_server.py  test_sources.py  test_strategy.py
