[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-mcp"
version = "0.1.0"
description = "Signal-driven Polymarket multi-service bot with MCP wrapper"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "mcp>=1.12.4",
]

[project.optional-dependencies]
trade = [
  "py-clob-client>=0.24.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
polymarket-mcp = "polymarket_mcp.main:main"
polymarket-mcp-server = "polymarket_mcp.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=polymarket_mcp --cov-report=term-missing --cov-fail-under=85"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
